ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: "https" # Redirect HTTP to HTTPS
spec:
  tls:
  - hosts:
    - wisecow.duckdns.org
    secretName: wisecow-tls
  rules:
  - host: wisecow.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-service
            port:
              number: 52111
